[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
indicatif = "0.17.8"
ndarray = "0.15.6"
ndarray-linalg = "0.16.0"
ndarray-rand = "0.14.0"
ndarray-stats = "0.5.1"
probability = "0.20.3"
tch = { git = "https://github.com/LaurentMazare/tch-rs.git", version = "0.15.0" }
